<resources>
    <string name="app_name">Agendamento de Laboratórios</string>
    <string name="bt1">Entrar</string>
    <string name="bt2">Cadastrar</string>
    <string name="text1">Usuario</string>
    <string name="text2">senha</string>
    <string name="welcome">Bem-Vindo</string>
    <string name="nome">Nome Completo:</string>
    <string name="matricula">Matricula:</string>
    <string name="email">Email institucional:</string>
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="senha2">Confirmar Senha:</string>
    <string name="titulocadrasto">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="action_settings">Settings</string>
    <string name="btnScan">Scan</string>
    <string name="txtbtnQRcode">Leitor de QR Code</string>
    <string name="txtbtnBarcode">Leitor de Código de Barra</string>
</resources>
