<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_cadrasto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.gamepc.agendamento3.Cadrasto">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TextView
                android:text="@string/titulocadrasto"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cadrasto"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/nome"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="21dp"
                android:text="@string/matricula"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="27dp"
                android:text="@string/usuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="27dp"
                android:text="@string/senha"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="27dp"
                android:text="@string/senha2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                />
            <Button
                android:text="@string/titulocadrasto"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:id="@+id/btCadrastar"
                style="@android:style/Widget.Button" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_marginLeft="160dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cadrasto_nome"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="somente números"
                android:ems="10"
                android:id="@+id/cadrasto_matricula"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="exemple@exemple.ufla.br"
                android:id="@+id/cadrasto_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cadrasto_user"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="minimo 6 digitos"
                android:ems="10"
                android:id="@+id/cadrasto_senha"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/cadrasto_confirmasenha"
                />
            <Button
                android:text="@string/cancelar"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:id="@+id/btVoltar"
                style="@android:style/Widget.Button" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>