<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/desertsky">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context="com.example.gamepc.agendamento3.MainScreen">

        <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:id="@+id/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textSize="32dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Usuário"
            android:ems="10"
            android:layout_marginTop="43dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:id="@+id/loguinNome"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="18dp"
            android:id="@+id/loguinSenha"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:hint="Senha"
            android:textSize="20sp" />

        <Button
            android:text="@string/bt1"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:id="@+id/bt1"
            style="@android:style/Widget.Button" />

        <Button
            android:text="@string/bt2"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:id="@+id/bt2"
            style="@android:style/Widget.Button" />

    </LinearLayout>
</ScrollView>
